--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -2836,6 +2836,13 @@
       }
     }
   }
+  .hover\:bg-base-300 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-base-300);
+      }
+    }
+  }
   .hover\:bg-base-content\/50 {
     &:hover {
       @media (hover: hover) {
@@ -3211,9 +3218,9 @@ textarea::-webkit-scrollbar {
   @media (prefers-color-scheme: dark) {
     :root {
       color-scheme: dark;
-      --color-base-100: oklch(29.51% 0.0532 238.32);
-      --color-base-200: oklch(20.00% 0.0532 238.32);
-      --color-base-300: oklch(15.00% 0.0532 238.32);
+      --color-base-100: oklch(30% 0.0532 238.32);
+      --color-base-200: oklch(24.00% 0.0532 238.32);
+      --color-base-300: oklch(0 0 0);
       --color-base-content: oklch(1 0 0);
       --color-primary: oklch(66.31% 0.1509 239.62);
       --color-primary-content: oklch(1 0 0);
@@ -3245,9 +3252,9 @@ textarea::-webkit-scrollbar {
 @layer base {
   :where(:root),:root:has(input.theme-controller[value=sharesphere_dark]:checked),[data-theme="sharesphere_dark"] {
     color-scheme: dark;
-    --color-base-100: oklch(29.51% 0.0532 238.32);
-    --color-base-200: oklch(20.00% 0.0532 238.32);
-    --color-base-300: oklch(15.00% 0.0532 238.32);
+    --color-base-100: oklch(30% 0.0532 238.32);
+    --color-base-200: oklch(24.00% 0.0532 238.32);
+    --color-base-300: oklch(0 0 0);
     --color-base-content: oklch(1 0 0);
     --color-primary: oklch(66.31% 0.1509 239.62);
     --color-primary-content: oklch(1 0 0);
