Mobile: correctly update filters when others are activated/deactivated

--- a/style/main.scss
+++ b/style/main.scss
@@ -2806,6 +2806,11 @@
       --input-color: var(--color-primary);
     }
   }
+  .toggle-info {
+    &:checked, &[aria-checked="true"] {
+      --input-color: var(--color-info);
+    }
+  }
   .toggle-primary {
     &:checked, &[aria-checked="true"] {
       --input-color: var(--color-primary);
