--- a/style/main.scss
+++ b/style/main.scss
@@ -47,6 +47,9 @@
     --spacing-124: 31rem;
     --spacing-128: 32rem;
     --spacing-160: 40rem;
+    --color-primary-hover: oklch(46% 0.15 240);
+    --color-secondary-hover: oklch(32.5% 0.14 150);
+    --color-error-hover: oklch(32% 0.245 27.325);
   }
 }
 @layer base {
@@ -672,100 +675,6 @@
         opacity: 0%;
         scale: 95%;
       }
-    }
-  }
-  .btn {
-    :where(&) {
-      width: unset;
-    }
-    display: inline-flex;
-    flex-shrink: 0;
-    cursor: pointer;
-    flex-wrap: nowrap;
-    align-items: center;
-    justify-content: center;
-    gap: calc(0.25rem * 1.5);
-    text-align: center;
-    vertical-align: middle;
-    outline-offset: 2px;
-    webkit-user-select: none;
-    user-select: none;
-    padding-inline: var(--btn-p);
-    color: var(--btn-fg);
-    --tw-prose-links: var(--btn-fg);
-    height: var(--size);
-    font-size: var(--fontsize, 0.875rem);
-    font-weight: 600;
-    outline-color: var(--btn-color, var(--color-base-content));
-    transition-property: color, background-color, border-color, box-shadow;
-    transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-    transition-duration: 0.2s;
-    border-start-start-radius: var(--join-ss, var(--radius-field));
-    border-start-end-radius: var(--join-se, var(--radius-field));
-    border-end-start-radius: var(--join-es, var(--radius-field));
-    border-end-end-radius: var(--join-ee, var(--radius-field));
-    background-color: var(--btn-bg);
-    background-size: auto, calc(var(--noise) * 100%);
-    background-image: none, var(--btn-noise);
-    border-width: var(--border);
-    border-style: solid;
-    border-color: var(--btn-border);
-    text-shadow: 0 0.5px oklch(100% 0 0 / calc(var(--depth) * 0.15));
-    box-shadow: 0 0.5px 0 0.5px oklch(100% 0 0 / calc(var(--depth) * 6%)) inset, var(--btn-shadow);
-    --size: calc(var(--size-field, 0.25rem) * 10);
-    --btn-bg: var(--btn-color, var(--color-base-200));
-    --btn-fg: var(--color-base-content);
-    --btn-p: 1rem;
-    --btn-border: color-mix(in oklab, var(--btn-bg), #000 calc(var(--depth) * 5%));
-    --btn-shadow: 0 3px 2px -2px color-mix(in oklab, var(--btn-bg) calc(var(--depth) * 30%), #0000),
-    0 4px 3px -2px color-mix(in oklab, var(--btn-bg) calc(var(--depth) * 30%), #0000);
-    --btn-noise: var(--fx-noise);
-    .prose & {
-      text-decoration-line: none;
-    }
-    @media (hover: hover) {
-      &:hover {
-        --btn-bg: color-mix(in oklab, var(--btn-color, var(--color-base-200)), #000 7%);
-      }
-    }
-    &:focus-visible {
-      outline-width: 2px;
-      outline-style: solid;
-    }
-    &:active:not(.btn-active) {
-      translate: 0 0.5px;
-      --btn-bg: color-mix(in oklab, var(--btn-color, var(--color-base-200)), #000 5%);
-      --btn-border: color-mix(in oklab, var(--btn-color, var(--color-base-200)), #000 7%);
-      --btn-shadow: 0 0 0 0 oklch(0% 0 0/0), 0 0 0 0 oklch(0% 0 0/0);
-    }
-    &:is(:disabled, [disabled], .btn-disabled) {
-      &:not(.btn-link, .btn-ghost) {
-        background-color: color-mix(in oklab, var(--color-base-content) 10%, transparent);
-        box-shadow: none;
-      }
-      pointer-events: none;
-      --btn-border: #0000;
-      --btn-noise: none;
-      --btn-fg: color-mix(in oklch, var(--color-base-content) 20%, #0000);
-      @media (hover: hover) {
-        &:hover {
-          pointer-events: none;
-          background-color: color-mix(in oklab, var(--color-neutral) 20%, transparent);
-          --btn-border: #0000;
-          --btn-fg: color-mix(in oklch, var(--color-base-content) 20%, #0000);
-        }
-      }
-    }
-    &:is(input[type="checkbox"], input[type="radio"]) {
-      appearance: none;
-      &::after {
-        content: attr(aria-label);
-      }
-    }
-    &:where(input:checked:not(.filter .btn)) {
-      --btn-color: var(--color-primary);
-      --btn-fg: var(--color-primary-content);
-      isolation: isolate;
     }
   }
   .loading {
@@ -1973,17 +1882,6 @@
   .table {
     display: table;
   }
-  .btn-circle {
-    border-radius: calc(infinity * 1px);
-    padding-inline: calc(0.25rem * 0);
-    width: var(--size);
-    height: var(--size);
-  }
-  .btn-square {
-    padding-inline: calc(0.25rem * 0);
-    width: var(--size);
-    height: var(--size);
-  }
   .h-0 {
     height: calc(var(--spacing) * 0);
   }
@@ -2064,10 +1962,6 @@
   }
   .min-h-full {
     min-height: 100%;
-  }
-  .btn-wide {
-    width: 100%;
-    max-width: calc(0.25rem * 64);
   }
   .w-0 {
     width: calc(var(--spacing) * 0);
@@ -2353,6 +2247,9 @@
       padding-block: calc(0.25rem * 2);
     }
   }
+  .\!rounded-none {
+    border-radius: 0 !important;
+  }
   .rounded-box {
     border-radius: var(--radius-box);
   }
@@ -2414,6 +2311,9 @@
     border-color: var(--color-error);
     color: var(--color-error-content);
     --alert-color: var(--color-error);
+  }
+  .border-base-100 {
+    border-color: var(--color-base-100);
   }
   .border-base-content\/20 {
     border-color: color-mix(in oklab, var(--color-base-content) 20%, transparent);
@@ -2531,6 +2431,9 @@
   }
   .p-3 {
     padding: calc(var(--spacing) * 3);
+  }
+  .\!px-3 {
+    padding-inline: calc(var(--spacing) * 3) !important;
   }
   .px-0\.5 {
     padding-inline: calc(var(--spacing) * 0.5);
@@ -2718,18 +2621,6 @@
       outline-offset: 2px;
     }
   }
-  .btn-ghost {
-    &:not(.btn-active, :hover, :active:focus, :focus-visible) {
-      --btn-shadow: "";
-      --btn-bg: #0000;
-      --btn-border: #0000;
-      --btn-noise: none;
-      &:not(:disabled, [disabled], .btn-disabled) {
-        outline-color: currentColor;
-        --btn-fg: currentColor;
-      }
-    }
-  }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
@@ -2777,23 +2668,6 @@
     --tw-ease: var(--ease-out);
     transition-timing-function: var(--ease-out);
   }
-  .btn-sm {
-    --fontsize: 0.75rem;
-    --btn-p: 0.75rem;
-    --size: calc(var(--size-field, 0.25rem) * 8);
-  }
-  .btn-error {
-    --btn-color: var(--color-error);
-    --btn-fg: var(--color-error-content);
-  }
-  .btn-primary {
-    --btn-color: var(--color-primary);
-    --btn-fg: var(--color-primary-content);
-  }
-  .btn-secondary {
-    --btn-color: var(--color-secondary);
-    --btn-fg: var(--color-secondary-content);
-  }
   .select-none {
     -webkit-user-select: none;
     user-select: none;
@@ -2818,22 +2692,6 @@
       --input-color: var(--color-secondary);
     }
   }
-  .hover\:border {
-    &:hover {
-      @media (hover: hover) {
-        border-style: var(--tw-border-style);
-        border-width: 1px;
-      }
-    }
-  }
-  .hover\:border-1 {
-    &:hover {
-      @media (hover: hover) {
-        border-style: var(--tw-border-style);
-        border-width: 1px;
-      }
-    }
-  }
   .hover\:border-white {
     &:hover {
       @media (hover: hover) {
@@ -2845,13 +2703,6 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-base-200);
-      }
-    }
-  }
-  .hover\:bg-base-content\/20 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: color-mix(in oklab, var(--color-base-content) 20%, transparent);
       }
     }
   }
@@ -2921,13 +2772,6 @@
       background-color: var(--color-base-300);
     }
   }
-  .max-2xl\:btn-sm {
-    @media (width < 96rem) {
-      --fontsize: 0.75rem;
-      --btn-p: 0.75rem;
-      --size: calc(var(--size-field, 0.25rem) * 8);
-    }
-  }
   .\32 xl\:hidden {
     @media (width >= 96rem) {
       display: none;
@@ -2941,11 +2785,6 @@
   .\32 xl\:h-6 {
     @media (width >= 96rem) {
       height: calc(var(--spacing) * 6);
-    }
-  }
-  .\32 xl\:h-7 {
-    @media (width >= 96rem) {
-      height: calc(var(--spacing) * 7);
     }
   }
   .\32 xl\:h-12 {
@@ -2988,11 +2827,6 @@
       width: calc(var(--spacing) * 6);
     }
   }
-  .\32 xl\:w-7 {
-    @media (width >= 96rem) {
-      width: calc(var(--spacing) * 7);
-    }
-  }
   .\32 xl\:w-12 {
     @media (width >= 96rem) {
       width: calc(var(--spacing) * 12);
@@ -3023,11 +2857,6 @@
       padding: calc(var(--spacing) * 0.5);
     }
   }
-  .\32 xl\:p-1\.5 {
-    @media (width >= 96rem) {
-      padding: calc(var(--spacing) * 1.5);
-    }
-  }
   .\32 xl\:text-4xl {
     @media (width >= 96rem) {
       font-size: var(--text-4xl);
@@ -3036,6 +2865,101 @@
   }
 }
 .button-ghost {
+  border-radius: var(--radius-xs);
+  padding: calc(var(--spacing) * 1);
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
+  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+  transition-duration: var(--tw-duration, var(--default-transition-duration));
+  --tw-duration: 250ms;
+  transition-duration: 250ms;
+  &:hover {
+    @media (hover: hover) {
+      background-color: var(--color-base-300);
+    }
+  }
+  &:active {
+    --tw-scale-x: 95%;
+    --tw-scale-y: 95%;
+    --tw-scale-z: 95%;
+    scale: var(--tw-scale-x) var(--tw-scale-y);
+  }
+  @media (width >= 96rem) {
+    padding: calc(var(--spacing) * 2);
+  }
+}
+.button-primary {
+  border-radius: var(--radius-xs);
+  background-color: var(--color-primary);
+  padding: calc(var(--spacing) * 1);
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
+  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+  transition-duration: var(--tw-duration, var(--default-transition-duration));
+  --tw-duration: 250ms;
+  transition-duration: 250ms;
+  &:hover {
+    @media (hover: hover) {
+      background-color: var(--color-primary-hover);
+    }
+  }
+  &:active {
+    --tw-scale-x: 95%;
+    --tw-scale-y: 95%;
+    --tw-scale-z: 95%;
+    scale: var(--tw-scale-x) var(--tw-scale-y);
+  }
+  @media (width >= 96rem) {
+    padding: calc(var(--spacing) * 2);
+  }
+}
+.button-secondary {
+  border-radius: var(--radius-xs);
+  background-color: var(--color-secondary);
+  padding: calc(var(--spacing) * 1);
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
+  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+  transition-duration: var(--tw-duration, var(--default-transition-duration));
+  --tw-duration: 250ms;
+  transition-duration: 250ms;
+  &:hover {
+    @media (hover: hover) {
+      background-color: var(--color-secondary-hover);
+    }
+  }
+  &:active {
+    --tw-scale-x: 95%;
+    --tw-scale-y: 95%;
+    --tw-scale-z: 95%;
+    scale: var(--tw-scale-x) var(--tw-scale-y);
+  }
+  @media (width >= 96rem) {
+    padding: calc(var(--spacing) * 2);
+  }
+}
+.button-error {
+  border-radius: var(--radius-xs);
+  background-color: var(--color-error);
+  padding: calc(var(--spacing) * 1);
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
+  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+  transition-duration: var(--tw-duration, var(--default-transition-duration));
+  --tw-duration: 250ms;
+  transition-duration: 250ms;
+  &:hover {
+    @media (hover: hover) {
+      background-color: var(--color-error-hover);
+    }
+  }
+  &:active {
+    --tw-scale-x: 95%;
+    --tw-scale-y: 95%;
+    --tw-scale-z: 95%;
+    scale: var(--tw-scale-x) var(--tw-scale-y);
+  }
+  @media (width >= 96rem) {
+    padding: calc(var(--spacing) * 2);
+  }
+}
+.button-rounded-ghost {
   border-radius: calc(infinity * 1px);
   padding: calc(var(--spacing) * 1);
   transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
@@ -3058,15 +2982,20 @@
     padding: calc(var(--spacing) * 2);
   }
 }
-.button-primary-active {
+.button-rounded-primary {
   border-radius: calc(infinity * 1px);
   background-color: var(--color-primary);
   padding: calc(var(--spacing) * 1);
   transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
   transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
   transition-duration: var(--tw-duration, var(--default-transition-duration));
-  --tw-duration: 100ms;
-  transition-duration: 100ms;
+  --tw-duration: 250ms;
+  transition-duration: 250ms;
+  &:hover {
+    @media (hover: hover) {
+      background-color: var(--color-primary-hover);
+    }
+  }
   &:active {
     --tw-scale-x: 95%;
     --tw-scale-y: 95%;
@@ -3075,6 +3004,70 @@
   }
   @media (width >= 96rem) {
     padding: calc(var(--spacing) * 2);
+  }
+}
+.button-rounded-error {
+  border-radius: calc(infinity * 1px);
+  background-color: var(--color-error);
+  padding: calc(var(--spacing) * 1);
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
+  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+  transition-duration: var(--tw-duration, var(--default-transition-duration));
+  --tw-duration: 250ms;
+  transition-duration: 250ms;
+  &:hover {
+    @media (hover: hover) {
+      background-color: var(--color-error-hover);
+    }
+  }
+  &:active {
+    --tw-scale-x: 95%;
+    --tw-scale-y: 95%;
+    --tw-scale-z: 95%;
+    scale: var(--tw-scale-x) var(--tw-scale-y);
+  }
+  @media (width >= 96rem) {
+    padding: calc(var(--spacing) * 2);
+  }
+}
+.navbar-icon-size {
+  height: calc(var(--spacing) * 5);
+  width: calc(var(--spacing) * 5);
+  @media (width >= 96rem) {
+    height: calc(var(--spacing) * 7);
+  }
+  @media (width >= 96rem) {
+    width: calc(var(--spacing) * 7);
+  }
+}
+.filter-icon-size {
+  height: calc(var(--spacing) * 4);
+  width: calc(var(--spacing) * 4);
+  @media (width >= 96rem) {
+    height: calc(var(--spacing) * 7);
+  }
+  @media (width >= 96rem) {
+    width: calc(var(--spacing) * 7);
+  }
+}
+.sphere-toolbar-icon-size {
+  height: calc(var(--spacing) * 4);
+  width: calc(var(--spacing) * 4);
+  @media (width >= 96rem) {
+    height: calc(var(--spacing) * 6);
+  }
+  @media (width >= 96rem) {
+    width: calc(var(--spacing) * 6);
+  }
+}
+.content-toolbar-icon-size {
+  height: calc(var(--spacing) * 4);
+  width: calc(var(--spacing) * 4);
+  @media (width >= 96rem) {
+    height: calc(var(--spacing) * 5);
+  }
+  @media (width >= 96rem) {
+    width: calc(var(--spacing) * 5);
   }
 }
 .spoiler-checkbox:checked + .spoiler-text {
@@ -3329,9 +3322,9 @@ textarea::-webkit-scrollbar {
       --color-base-200: oklch(22% 0.045 245);
       --color-base-300: oklch(0 0 0);
       --color-base-content: oklch(1 0 0);
-      --color-primary: oklch(66.31% 0.1509 239.62);
+      --color-primary: oklch(66% 0.15 240);
       --color-primary-content: oklch(1 0 0);
-      --color-secondary: oklch(52.73% 0.1371 150.07);
+      --color-secondary: oklch(52.5% 0.14 150);
       --color-secondary-content: oklch(1 0 0);
       --color-accent: oklch(77% 0.152 181.912);
       --color-accent-content: oklch(38% 0.063 188.416);
@@ -3363,9 +3356,9 @@ textarea::-webkit-scrollbar {
     --color-base-200: oklch(22% 0.045 245);
     --color-base-300: oklch(0 0 0);
     --color-base-content: oklch(1 0 0);
-    --color-primary: oklch(66.31% 0.1509 239.62);
+    --color-primary: oklch(66% 0.15 240);
     --color-primary-content: oklch(1 0 0);
-    --color-secondary: oklch(52.73% 0.1371 150.07);
+    --color-secondary: oklch(52.5% 0.14 150);
     --color-secondary-content: oklch(1 0 0);
     --color-accent: oklch(77% 0.152 181.912);
     --color-accent-content: oklch(38% 0.063 188.416);
