Mobile: add outline for vote buttons, start adding missing tests for new category filters

--- a/style/main.scss
+++ b/style/main.scss
@@ -1368,6 +1368,9 @@
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
+  }
   .file-input {
     cursor: pointer;
     cursor: pointer;
@@ -2477,6 +2480,12 @@
   .bg-error {
     background-color: var(--color-error);
   }
+  .bg-error\/20 {
+    background-color: color-mix(in srgb, var(--color-error) 20%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-error) 20%, transparent);
+    }
+  }
   .bg-green-500 {
     background-color: var(--color-green-500);
   }
@@ -2503,6 +2512,12 @@
   }
   .bg-success {
     background-color: var(--color-success);
+  }
+  .bg-success\/20 {
+    background-color: color-mix(in srgb, var(--color-success) 20%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-success) 20%, transparent);
+    }
   }
   .bg-violet-500 {
     background-color: var(--color-violet-500);
@@ -2719,6 +2734,11 @@
   .opacity-100 {
     opacity: 100%;
   }
+  .shadow-md\/30 {
+    --tw-shadow-alpha: 30%;
+    --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, oklab(from rgb(0 0 0 / 0.1) l a b / 30%)), 0 2px 4px -2px var(--tw-shadow-color, oklab(from rgb(0 0 0 / 0.1) l a b / 30%));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .shadow-sm {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -2871,6 +2891,14 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-success);
+      }
+    }
+  }
+  .hover\:shadow-none {
+    &:hover {
+      @media (hover: hover) {
+        --tw-shadow: 0 0 #0000;
+        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
       }
     }
   }
