Mobile: fix reload crash by disabling on_click_outside server side

--- a/style/main.scss
+++ b/style/main.scss
@@ -2270,6 +2270,9 @@
   .justify-start {
     justify-content: flex-start;
   }
+  .justify-stretch {
+    justify-content: stretch;
+  }
   .gap-1 {
     gap: calc(var(--spacing) * 1);
   }
